--- a/index.html
+++ b/index.html
@@ -5,36 +5,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UEFA-Penaulty ShootOut</title>
     <link rel="stylesheet" href="./style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
 </head>
 <body>
    <div class="container">
-       <div class="row1">
-           <div class="col1">
-               <img src="assets/RealMadridFC.jpg" alt="" width="280" height="300">
-                   <ol><span>0</span></ol>
-                   <ol><span>1</span></ol>
-                   <ol><span>1</span></ol>
-                   <ol><span>0</span></ol>
-                   <ol><span>1</span></ol>
-           </div>
-           <div class="col2">
-               <span>3</span>
-               <span>-</span>
-               <span>3</span>
-           </div>
-           <div class="col3">
-            <img src="assets/HescaFC.jpg" alt="" width="280" height="300" >
-                <ol><span>1</span></ol>
-                <ol><span>1</span></ol>
-                <ol><span>1</span></ol>
-                <ol><span>0</span></ol>
-                <ol><span>0</span></ol>
-           </div>
-           <div class="row2">
-               <button>Try Again</button>
-           </div>
-       </div>
+       <div class="row">
+           <div class="col">
+               <img class="profile-icon" src="assets/RealMadridFC.jpg" alt="" width="250px" height="280px">
+               <span class="name" id="team-1-name">Real Madrid </span>
 
-   </div>
+               <div class="row round-shots" id="team-1-round-shots" >
+                   <span class="col">-</span>
+                   <span class="col">-</span>
+                   <span class="col">-</span>
+                   <span class="col">-</span>
+                   <span class="col">-</span>
+                </div>
+
+           </div>
+
+           <div class="col">
+               <div class="row score">
+                  <span class="col">0</span>
+                  <span class="col">-</span>
+                  <span class="col">0</span>
+               </div>
+           </div>
+
+           <div class="col">
+            <img class="profile-icon"   src="assets/HescaFC.jpg" alt="" width="250px" height="280px" >
+            <span class="name" id="team-2-name">Huesca </span>
+                <div class="row round-shots" id="team-1-round-shots">
+                    <span class="col">-</span>
+                    <span class="col">-</span>
+                    <span class="col">-</span>
+                    <span class="col">-</span>
+                    <span class="col">-</span>            
+                </div>
+           </div>
+     </div>
+     <div class="row">
+         <div >
+            <button id="btnShoot">ShootOut</button>
+         </div>
+       </div>
+ </div>
 </body>
 </html>
