Updated CSS & JS

--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
    <div class="container1">
        <div class="row" id="result" hidden></div>
        <div class="row">
-           <div class="col">
+           <div class="col square" >
                <img class="profile-icon" src="assets/RealMadridFC.jpg" alt="" width="200px" height="200px">
                <span class="name" id="team-1-name">Real Madrid </span>
 
                <div class="row round-shots" id="team-1-round-shots" >
-                   <span class="col">-</span>
-                   <span class="col">-</span>
-                   <span class="col">-</span>
-                   <span class="col">-</span>
-                   <span class="col">-</span>
+                   <span class="bull" id="indexNo"></span>
+                   <span class="bull" id="indexNo"></span>
+                   <span class="bull" id="indexNo"></span>
+                   <span class="bull" id="indexNo"></span>
+                   <span class="bull" id="indexNo"></span>
                 </div>
 
            </div>
@@ -34,15 +34,15 @@
                </div>
            </div>
 
-           <div class="col">
+           <div class="col square">
             <img class="profile-icon"   src="assets/HescaFC.jpg" alt="" width="200px" height="200px" >
             <span class="name" id="team-2-name">Huesca </span>
                 <div class="row round-shots" id="team-2-round-shots">
-                    <span class="col">-</span>
-                    <span class="col">-</span>
-                    <span class="col">-</span>
-                    <span class="col">-</span>
-                    <span class="col">-</span>            
+                    <span class="bull" id="indexNo"></span>
+                    <span class="bull" id="indexNo"></span>
+                    <span class="bull" id="indexNo"></span>
+                    <span class="bull" id="indexNo"></span>
+                    <span class="bull" id="indexNo"></span>         
                 </div>
            </div>
      </div>
@@ -53,18 +53,18 @@
        </div>
  </div>
 
- <div class="container2" style="visibility: hidden;">
+ <div class="container2" >
     <div class="row">
-        <div class="col">
+        <div class="col square">
             <img class="profile-icon" src="assets/FCBayernMunich.jpg" alt="" width="200px" height="200px">
             <span class="name" id="FinalTeam-1-name">Bayern Munich </span>
 
             <div class="row round-shots" id="FinalTeam-1-round-shots" >
-                <span class="col">-</span>
-                <span class="col">-</span>
-                <span class="col">-</span>
-                <span class="col">-</span>
-                <span class="col">-</span>
+                <span class="bull" id="indexNo"></span>
+                <span class="bull" id="indexNo"></span>
+                <span class="bull" id="indexNo"></span>
+                <span class="bull" id="indexNo"></span>
+                <span class="bull" id="indexNo"></span>
              </div>
 
         </div>
@@ -77,15 +77,15 @@
             </div>
         </div>
 
-        <div class="col">
+        <div class="col square">
          <img class="profile-icon"   src="assets/HescaFC.jpg" alt="" width="200px" height="200px" >
          <span class="name" id="FinalTeam-2-name">Huesca </span>
              <div class="row round-shots" id="FinalTeam-2-round-shots">
-                 <span class="col">-</span>
-                 <span class="col">-</span>
-                 <span class="col">-</span>
-                 <span class="col">-</span>
-                 <span class="col">-</span>            
+                <span class="bull" id="indexNo"></span>
+                <span class="bull" id="indexNo"></span>
+                <span class="bull" id="indexNo"></span>
+                <span class="bull" id="indexNo"></span>
+                <span class="bull" id="indexNo"></span>           
              </div>
         </div>
   </div>
@@ -97,16 +97,16 @@
 </div>
 <div class="container3">
     <div class="row">
-        <div class="col">
+        <div class="col square">
             <img class="profile-icon" src="assets/FCBayernMunich.jpg" alt="" width="200px" height="200px">
             <span class="name" id="team-3-name">Bayern Munich </span>
 
             <div class="row round-shots" id="team-3-round-shots" >
-                <span class="col">-</span>
-                <span class="col">-</span>
-                <span class="col">-</span>
-                <span class="col">-</span>
-                <span class="col">-</span>
+                   <span class="bull" id="indexNo"></span>
+                   <span class="bull" id="indexNo"></span>
+                   <span class="bull" id="indexNo"></span>
+                   <span class="bull" id="indexNo"></span>
+                   <span class="bull" id="indexNo"></span> 
              </div>
 
         </div>
@@ -119,21 +119,21 @@
             </div>
         </div>
 
-        <div class="col">
-         <img class="profile-icon"   src="assets/chelsea.png" alt="" width="200px" height="200px" >
+        <div class="col square">
+         <img class="profile-icon"   src="assets/livepool.jpg" alt="" width="200px" height="200px" >
          <span class="name" id="team-4-name">Chelsea </span>
              <div class="row round-shots" id="team-4-round-shots">
-                 <span class="col">-</span>
-                 <span class="col">-</span>
-                 <span class="col">-</span>
-                 <span class="col">-</span>
-                 <span class="col">-</span>            
+                   <span class="bull" id="indexNo"></span>
+                   <span class="bull" id="indexNo"></span>
+                   <span class="bull" id="indexNo"></span>
+                   <span class="bull" id="indexNo"></span>
+                   <span class="bull" id="indexNo"></span>           
              </div>
         </div>
   </div>
   <div class="row">
       <div >
-         <button id="btnShootC"></button>
+         <button id="btnShootC" onclick="handleShootT2ButtonClick()"></button>
       </div>
     </div>
 </div>
